# PDF-AI-Reader

./: .gitignore  2026-05-21_工作记录与问题复盘.md  90-作业报告.md  90-源代码.txt  AGENTS.md  LICENSE  README.md  TODO.md  config.example.yaml  pack_code.py  pyproject.toml  requirements.txt  run_py314.bat  run_py314.vbs  run_py314_silent.vbs  技术设计文档 (TDD).md  极简设计报告.md  需求文档 (PRD).md
docs/: async_formula_indexing_design.md  born_digital_formula_system_index.md  born_digital_pdf_foundations.md  born_digital_pdf_tiny_model_feasibility_report.md  born_digital_symbol_identity_repair_report.md  current_goal_and_next_steps.md  e2e_test_plan.md  formula_extraction_research.md  formula_multitool_fusion_design.md  formula_ocr_performance_design.md  formula_quality_acceptance_plan.md  formula_tool_audit_report.md  local_standards_cache_index.md  next_session_handoff.md  pdf_viewer_rendering_refactor_plan.md  rag_graphrag_migration_plan.md  tiny_born_digital_math_model_engineering.md  tinybdmath_ai_math_latex_structure_scope.md  workspace_inventory.md
src/: __init__.py  main.py
tests/: test_ai_foundations.py  test_annotation_store.py  test_ask_flow.py  test_born_digital_math.py  test_cloud_models.py  test_e2e_pdf_workflow_stress.py  test_environment.py  test_external_formula_tools.py  test_formula_acceptance_dialog.py  test_formula_detector.py  test_formula_index_flow.py  test_formula_index_performance.py  test_formula_index_scheduler.py  test_formula_knowledge_graph.py  test_formula_knowledge_update.py  test_formula_multiround_pipeline.py  test_formula_semantic_review.py  test_navigator_toc.py  (+35 more)
(+136 files in other folders)
