[project]
name = "pdf-ai-reader"
version = "1.0.0"
description = "AI-assisted academic PDF reader built with PySide6 and PyMuPDF."
requires-python = "==3.14.4"
dependencies = [
    "PySide6>=6.11.0",
    "PyMuPDF>=1.27.2",
    "ollama>=0.6.1",
    "litellm>=1.77.3",
    "chromadb>=0.5.0",
    "llama-index-core>=0.14.22",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-llms-litellm>=0.7.1",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-qt>=4.5.0",
    "pywinauto>=0.6.9",
    "pyautogui>=0.9.54",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = ".cache/pytest"
